--- a/parking-complete(練習).html
+++ b/parking-complete(練習).html
@@ -49,22 +49,22 @@
         <div class="row">
             <div class="col-sm-3 col-md-2 sidebar">
                 <ul class="nav nav-sidebar">
-                    <li class="active"><a href="#">Overview <span class="sr-only">(current)</span></a></li>
-                    <li><a href="#">Reports</a></li>
-                    <li><a href="#">Analytics</a></li>
-                    <li><a href="#">Export</a></li>
+                    <li class="active"><a href="index.html">首頁<span class="sr-only">(current)</span></a></li>
+                    <li><a href="Grid%20%E6%8E%92%E7%89%88%E4%BD%88%E5%B1%80.html" target="_blank">佈局排版</a></li>
+                    <li><a href="guess%20number%E7%8C%9C%E6%95%B8%E5%AD%97).html" target="_blank">猜數字</a></li>
+                    <li><a href="horoscopeg-ajax-ui-生命靈數..html" target="_blank">生命靈數-ui</a></li>
                 </ul>
                 <ul class="nav nav-sidebar">
-                    <li><a href="">Nav item</a></li>
-                    <li><a href="">Nav item again</a></li>
-                    <li><a href="">One more nav</a></li>
-                    <li><a href="">Another nav item</a></li>
-                    <li><a href="">More navigation</a></li>
+                    <li><a href="horoscopeg-ajax-生命靈數.html" target="_blank">生命靈數</a></li>
+                    <li><a href="parking-complete(練習).html" target="_blank">路外停車資訊</a></li>
+                    <li><a href="paw-news(肉球新聞).html" target="_blank">肉球新聞</a></li>
+                    <li><a href="tax-rate-level(累進稅率).html" target="_blank">累進稅率</a></li>
+                    <li><a href="youbike-$tmpl-gmap-complete.html" target="_blank">youbike資訊</a></li>
                 </ul>
                 <ul class="nav nav-sidebar">
-                    <li><a href="">Nav item again</a></li>
-                    <li><a href="">One more nav</a></li>
-                    <li><a href="">Another nav item</a></li>
+                    <li><a href="youbike-$tmpl-gmap-waterfull-complete.html" target="_blank">youbike資訊1</a></li>
+                    <li><a href="小瑪莉.html" target="_blank">小瑪莉</a></li>
+                    <li><a href="溫度轉換器.html" target="_blank">溫度轉換器</a></li>
                 </ul>
             </div>
             <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
