--- a/溫度轉換器.html
+++ b/溫度轉換器.html
@@ -2,31 +2,31 @@
 <html lang="en">
 
 <head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-  <meta name="description" content="">
-  <meta name="author" content="">
-  <link rel="icon" href="../../favicon.ico">
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <link rel="icon" href="../../favicon.ico">
 
-  <title>Dashboard Template for Bootstrap</title>
+    <title>Dashboard Template for Bootstrap</title>
 
-  <!-- Bootstrap core CSS -->
-  <link href="stylesheets/bootstrap.min.css" rel="stylesheet">
+    <!-- Bootstrap core CSS -->
+    <link href="stylesheets/bootstrap.min.css" rel="stylesheet">
 
-  <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-  <!--<link href="../../assets/css/ie10-viewport-bug-workaround.css" rel="stylesheet">-->
+    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+    <!--<link href="../../assets/css/ie10-viewport-bug-workaround.css" rel="stylesheet">-->
 
-  <!-- Custom styles for this template -->
-  <link href="stylesheets/dashboard.css" rel="stylesheet">
+    <!-- Custom styles for this template -->
+    <link href="stylesheets/dashboard.css" rel="stylesheet">
 
-  <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
-  <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
-  <!--<script src="../../assets/js/ie-emulation-modes-warning.js"></script>-->
+    <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
+    <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
+    <!--<script src="../../assets/js/ie-emulation-modes-warning.js"></script>-->
 
-  <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-  <!--[if lt IE 9]>
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
@@ -36,159 +36,158 @@
 
 
 
-  <nav class="navbar navbar-inverse navbar-fixed-top">
-    <div class="container-fluid">
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false"
-          aria-controls="navbar">
+    <nav class="navbar navbar-inverse navbar-fixed-top">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
             <span class="sr-only">Toggle navigation</span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-        <a class="navbar-brand" href="#">Project name</a>
-      </div>
-      <div id="navbar" class="navbar-collapse collapse">
-        <ul class="nav navbar-nav navbar-right">
-          <li><a href="#">Dashboard</a></li>
-          <li><a href="#">Settings</a></li>
-          <li><a href="#">Profile</a></li>
-          <li><a href="#">Help</a></li>
-        </ul>
-        <form class="navbar-form navbar-right">
-          <input type="text" class="form-control" placeholder="Search...">
-        </form>
-      </div>
-    </div>
-  </nav>
+                <a class="navbar-brand" href="#">Project name</a>
+            </div>
+            <div id="navbar" class="navbar-collapse collapse">
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a href="#">Dashboard</a></li>
+                    <li><a href="#">Settings</a></li>
+                    <li><a href="#">Profile</a></li>
+                    <li><a href="#">Help</a></li>
+                </ul>
+                <form class="navbar-form navbar-right">
+                    <input type="text" class="form-control" placeholder="Search...">
+                </form>
+            </div>
+        </div>
+    </nav>
 
-  <div class="container-fluid">
-    <div class="row">
-      <div class="col-sm-3 col-md-2 sidebar">
-        <ul class="nav nav-sidebar">
-          <li class="active"><a href="#">Overview <span class="sr-only">(current)</span></a></li>
-          <li><a href="#">Reports</a></li>
-          <li><a href="#">Analytics</a></li>
-          <li><a href="#">Export</a></li>
-        </ul>
-        <ul class="nav nav-sidebar">
-          <li><a href="">Nav item</a></li>
-          <li><a href="">Nav item again</a></li>
-          <li><a href="">One more nav</a></li>
-          <li><a href="">Another nav item</a></li>
-          <li><a href="">More navigation</a></li>
-        </ul>
-        <ul class="nav nav-sidebar">
-          <li><a href="">Nav item again</a></li>
-          <li><a href="">One more nav</a></li>
-          <li><a href="">Another nav item</a></li>
-        </ul>
-      </div>
-      <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-        <label>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-sm-3 col-md-2 sidebar">
+                <ul class="nav nav-sidebar">
+                    <li class="active"><a href="index.html">首頁<span class="sr-only">(current)</span></a></li>
+                    <li><a href="Grid%20%E6%8E%92%E7%89%88%E4%BD%88%E5%B1%80.html" target="_blank">佈局排版</a></li>
+                    <li><a href="guess%20number%E7%8C%9C%E6%95%B8%E5%AD%97).html" target="_blank">猜數字</a></li>
+                    <li><a href="horoscopeg-ajax-ui-生命靈數..html" target="_blank">生命靈數-ui</a></li>
+                </ul>
+                <ul class="nav nav-sidebar">
+                    <li><a href="horoscopeg-ajax-生命靈數.html" target="_blank">生命靈數</a></li>
+                    <li><a href="parking-complete(練習).html" target="_blank">路外停車資訊</a></li>
+                    <li><a href="paw-news(肉球新聞).html" target="_blank">肉球新聞</a></li>
+                    <li><a href="tax-rate-level(累進稅率).html" target="_blank">累進稅率</a></li>
+                    <li><a href="youbike-$tmpl-gmap-complete.html" target="_blank">youbike資訊</a></li>
+                </ul>
+                <ul class="nav nav-sidebar">
+                    <li><a href="youbike-$tmpl-gmap-waterfull-complete.html" target="_blank">youbike資訊1</a></li>
+                    <li><a href="小瑪莉.html" target="_blank">小瑪莉</a></li>
+                    <li><a href="溫度轉換器.html" target="_blank">溫度轉換器</a></li>
+                </ul>
+            </div>
+            <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
+                <label>
             <input id="convert-c" type="radio" name="unit" value="c" checked="true"> 攝氏轉換為華氏
           </label>
-        <br />
-        <label>
+                <br />
+                <label>
             <input  id="convert-f" type="radio" name="unit" value="f"> 華氏轉換為攝氏
           </label>
 
 
 
-        <div class="row">
-          <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
-            <div class="btn-group-vertical btn-block" role="group" aria-label="...">
-              <a class="btn btn-default" href="#" role="button" onclick="inputnum('1')">1</a>
-              <a class="btn btn-default" href="#" role="button" onclick="inputnum('4')">4</a>
-              <a class="btn btn-default" href="#" role="button" onclick="inputnum('7')">7</a>
-              <a class="btn btn-default" href="#" role="button" onclick="inputnum('0')">0</a>
+                <div class="row">
+                    <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
+                        <div class="btn-group-vertical btn-block" role="group" aria-label="...">
+                            <a class="btn btn-default" href="#" role="button" onclick="inputnum('1')">1</a>
+                            <a class="btn btn-default" href="#" role="button" onclick="inputnum('4')">4</a>
+                            <a class="btn btn-default" href="#" role="button" onclick="inputnum('7')">7</a>
+                            <a class="btn btn-default" href="#" role="button" onclick="inputnum('0')">0</a>
+                        </div>
+                    </div>
+                    <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
+                        <div class="btn-group-vertical btn-block" role="group" aria-label="...">
+                            <a class="btn btn-default" href="#" role="button" onclick="inputnum('2')">2</a>
+                            <a class="btn btn-default" href="#" role="button" onclick="inputnum('5')">5</a>
+                            <a class="btn btn-default" href="#" role="button" onclick="inputnum('8')">8</a>
+                            <a class="btn btn-default" href="#" role="button" onclick="inputnum('.')">.</a>
+                        </div>
+                    </div>
+                    <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
+                        <div class="btn-group-vertical btn-block" role="group" aria-label="...">
+                            <a class="btn btn-default" href="#" role="button" onclick="inputnum('3')">3</a>
+                            <a class="btn btn-default" href="#" role="button" onclick="inputnum('6')">6</a>
+                            <a class="btn btn-default" href="#" role="button" onclick="inputnum('9')">9</a>
+                            <!--<a class="btn btn-default" href="#" role="button" onclick="return press('9')">9</a>-->
+                        </div>
+                    </div>
+                </div>
+                <br />
+
+                <div class="input-group">
+                    <input id="input" type="text" class="form-control" aria-label="...">
+                    <div class="input-group-btn">
+                        <a class="btn btn-default" href="#" role="button" onclick="doCalculate(); return false;">轉換</a>
+                        <a class="btn btn-default" href="#" role="button" onclick="doclear()">清除</a>
+                    </div>
+                </div>
+
+
+                <br />
+                <div class="input-group">
+                    <span class="input-group-addon" id="basic-addon1">結果</span>
+                    <input id="result" type="text" class="form-control" placeholder=" " aria-describedby="basic-addon1">
+                    <!--//type="text" 要用成文字類型，. 才會出來-->
+                </div>
+
             </div>
-          </div>
-          <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
-            <div class="btn-group-vertical btn-block" role="group" aria-label="...">
-              <a class="btn btn-default" href="#" role="button" onclick="inputnum('2')">2</a>
-              <a class="btn btn-default" href="#" role="button" onclick="inputnum('5')">5</a>
-              <a class="btn btn-default" href="#" role="button" onclick="inputnum('8')">8</a>
-              <a class="btn btn-default" href="#" role="button" onclick="inputnum('.')">.</a>
-            </div>
-          </div>
-          <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
-            <div class="btn-group-vertical btn-block" role="group" aria-label="...">
-              <a class="btn btn-default" href="#" role="button" onclick="inputnum('3')">3</a>
-              <a class="btn btn-default" href="#" role="button" onclick="inputnum('6')">6</a>
-              <a class="btn btn-default" href="#" role="button" onclick="inputnum('9')">9</a>
-              <!--<a class="btn btn-default" href="#" role="button" onclick="return press('9')">9</a>-->
-            </div>
-          </div>
         </div>
-        <br />
-
-        <div class="input-group">
-          <input id="input" type="text" class="form-control" aria-label="...">
-          <div class="input-group-btn">
-            <a class="btn btn-default" href="#" role="button" onclick="doCalculate(); return false;">轉換</a>
-            <a class="btn btn-default" href="#" role="button" onclick="doclear()">清除</a>
-          </div>
-        </div>
-
-
-        <br />
-        <div class="input-group">
-          <span class="input-group-addon" id="basic-addon1">結果</span>
-          <input id="result" type="text" class="form-control" placeholder=" " aria-describedby="basic-addon1">
-          <!--//type="text" 要用成文字類型，. 才會出來-->
-        </div>
-
-      </div>
     </div>
-  </div>
 
-  <!-- Bootstrap core JavaScript
+    <!-- Bootstrap core JavaScript
     ================================================== -->
-  <!-- Placed at the end of the document so the pages load faster -->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-  <!--<script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>-->
-  <script src="scripts/bootstrap.min.js"></script>
-  <!-- Just to make our placeholder images work. Don't actually copy the next line! -->
-  <!--<script src="../../assets/js/vendor/holder.min.js"></script>-->
-  <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-  <!--<script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>-->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <!--<script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>-->
+    <script src="scripts/bootstrap.min.js"></script>
+    <!-- Just to make our placeholder images work. Don't actually copy the next line! -->
+    <!--<script src="../../assets/js/vendor/holder.min.js"></script>-->
+    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+    <!--<script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>-->
 
-  <script>
-    function doCalculate() {
-      var input = document.getElementById("input");
-      var result = document.getElementById("result");
-      var convertc = document.getElementById("convert-c");
-      var convertf = document.getElementById("convert-f");
+    <script>
+        function doCalculate() {
+            var input = document.getElementById("input");
+            var result = document.getElementById("result");
+            var convertc = document.getElementById("convert-c");
+            var convertf = document.getElementById("convert-f");
 
-      var r = 0;
-      if (convertc.checked) {
-        r = (input.value * 1.8) + 32;
-      } else if (convertf.checked) {
-        r = (input.value - 32) / 1.8;
-      }
+            var r = 0;
+            if (convertc.checked) {
+                r = (input.value * 1.8) + 32;
+            } else if (convertf.checked) {
+                r = (input.value - 32) / 1.8;
+            }
 
-      result.value = r;
-    }
+            result.value = r;
+        }
 
 
-    function doclear() {
-      document.getElementById("input").value = 0;
-      document.getElementById("result").value = "";
-    }
+        function doclear() {
+            document.getElementById("input").value = 0;
+            document.getElementById("result").value = "";
+        }
 
-    function inputnum(str) {
+        function inputnum(str) {
 
-      // var input = document.getElementById("input");
-      // input.value += str;
+            // var input = document.getElementById("input");
+            // input.value += str;
 
-      if (document.getElementById("input").value == 0) {
-      document.getElementById("input").value = str;
-      } else {
-      document.getElementById("input").value += str;
-      }
-    }
-  </script>
+            if (document.getElementById("input").value == 0) {
+                document.getElementById("input").value = str;
+            } else {
+                document.getElementById("input").value += str;
+            }
+        }
+    </script>
 
 
 </body>
