--- a/guess number猜數字).html
+++ b/guess number猜數字).html
@@ -2,31 +2,31 @@
 <html lang="en">
 
 <head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-  <meta name="description" content="">
-  <meta name="author" content="">
-  <link rel="icon" href="../../favicon.ico">
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <link rel="icon" href="../../favicon.ico">
 
-  <title>Dashboard Template for Bootstrap</title>
+    <title>Dashboard Template for Bootstrap</title>
 
-  <!-- Bootstrap core CSS -->
-  <link href="stylesheets/bootstrap.min.css" rel="stylesheet">
+    <!-- Bootstrap core CSS -->
+    <link href="stylesheets/bootstrap.min.css" rel="stylesheet">
 
-  <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-  <!--<link href="../../assets/css/ie10-viewport-bug-workaround.css" rel="stylesheet">-->
+    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+    <!--<link href="../../assets/css/ie10-viewport-bug-workaround.css" rel="stylesheet">-->
 
-  <!-- Custom styles for this template -->
-  <link href="stylesheets/dashboard.css" rel="stylesheet">
+    <!-- Custom styles for this template -->
+    <link href="stylesheets/dashboard.css" rel="stylesheet">
 
-  <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
-  <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
-  <!--<script src="../../assets/js/ie-emulation-modes-warning.js"></script>-->
+    <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
+    <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
+    <!--<script src="../../assets/js/ie-emulation-modes-warning.js"></script>-->
 
-  <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-  <!--[if lt IE 9]>
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
@@ -34,216 +34,215 @@
 
 <body>
 
-  <nav class="navbar navbar-inverse navbar-fixed-top">
-    <div class="container-fluid">
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false"
-          aria-controls="navbar">
+    <nav class="navbar navbar-inverse navbar-fixed-top">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
             <span class="sr-only">Toggle navigation</span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-        <a class="navbar-brand" href="#">Project name</a>
-      </div>
-      <div id="navbar" class="navbar-collapse collapse">
-        <ul class="nav navbar-nav navbar-right">
-          <li><a href="#">Dashboard</a></li>
-          <li><a href="#">Settings</a></li>
-          <li><a href="#">Profile</a></li>
-          <li><a href="#">Help</a></li>
-        </ul>
-        <form class="navbar-form navbar-right">
-          <input type="text" class="form-control" placeholder="Search...">
-        </form>
-      </div>
-    </div>
-  </nav>
-
-  <div class="container-fluid">
-    <div class="row">
-      <div class="col-sm-3 col-md-2 sidebar">
-        <ul class="nav nav-sidebar">
-          <li class="active"><a href="#">Overview <span class="sr-only">(current)</span></a></li>
-          <li><a href="#">Reports</a></li>
-          <li><a href="#">Analytics</a></li>
-          <li><a href="#">Export</a></li>
-        </ul>
-        <ul class="nav nav-sidebar">
-          <li><a href="">Nav item</a></li>
-          <li><a href="">Nav item again</a></li>
-          <li><a href="">One more nav</a></li>
-          <li><a href="">Another nav item</a></li>
-          <li><a href="">More navigation</a></li>
-        </ul>
-        <ul class="nav nav-sidebar">
-          <li><a href="">Nav item again</a></li>
-          <li><a href="">One more nav</a></li>
-          <li><a href="">Another nav item</a></li>
-        </ul>
-      </div>
-      <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-        <div class="btn-group btn-group-justified" role="group" aria-label="...">
-          <div class="btn-group" role="group">
-            <button type="button" class="btn btn-default" onclick="startGame()">開始</button>
-          </div>
-          <div class="btn-group" role="group">
-            <button type="button" class="btn btn-default" onclick="abortGame()">放棄重來</button>
-          </div>
-          <div class="btn-group" role="group">
-            <button type="button" class="btn btn-default" onclick="showAnswer()">看答案</button>
-          </div>
+                <a class="navbar-brand" href="#">Project name</a>
+            </div>
+            <div id="navbar" class="navbar-collapse collapse">
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a href="#">Dashboard</a></li>
+                    <li><a href="#">Settings</a></li>
+                    <li><a href="#">Profile</a></li>
+                    <li><a href="#">Help</a></li>
+                </ul>
+                <form class="navbar-form navbar-right">
+                    <input type="text" class="form-control" placeholder="Search...">
+                </form>
+            </div>
         </div>
-        <br />
+    </nav>
 
-        <ul class="list-group" id="guessResults">
-          <!--<li class="list-group-item">-->
-            <!--<p> <span class="label label-danger">0A1B</span> 1234</p>-->
-            <!--<p> <span class="label label-danger">0A2B</span> 3456</p>-->
-            <!--<p> <span class="label label-danger">0A3B</span> 4567</p>-->
-            <!--<p> <span class="label label-success"> 4A0B</span> 6385</p>-->
-          <!--</li>-->
-        </ul>
-
-        <br />
+    <div class="container-fluid">
         <div class="row">
-          <div class="col-lg-6">
-            <div class="input-group">
-              <span class="input-group-addon" id="basic-addon1">猜答案</span>
-              <input type="text" class="form-control" id="userGuess">
-              <span class="input-group-btn">
+            <div class="col-sm-3 col-md-2 sidebar">
+                <ul class="nav nav-sidebar">
+                    <li class="active"><a href="index.html">首頁<span class="sr-only">(current)</span></a></li>
+                    <li><a href="Grid%20%E6%8E%92%E7%89%88%E4%BD%88%E5%B1%80.html" target="_blank">佈局排版</a></li>
+                    <li><a href="guess%20number%E7%8C%9C%E6%95%B8%E5%AD%97).html" target="_blank">猜數字</a></li>
+                    <li><a href="horoscopeg-ajax-ui-生命靈數..html" target="_blank">生命靈數-ui</a></li>
+                </ul>
+                <ul class="nav nav-sidebar">
+                    <li><a href="horoscopeg-ajax-生命靈數.html" target="_blank">生命靈數</a></li>
+                    <li><a href="parking-complete(練習).html" target="_blank">路外停車資訊</a></li>
+                    <li><a href="paw-news(肉球新聞).html" target="_blank">肉球新聞</a></li>
+                    <li><a href="tax-rate-level(累進稅率).html" target="_blank">累進稅率</a></li>
+                    <li><a href="youbike-$tmpl-gmap-complete.html" target="_blank">youbike資訊</a></li>
+                </ul>
+                <ul class="nav nav-sidebar">
+                    <li><a href="youbike-$tmpl-gmap-waterfull-complete.html" target="_blank">youbike資訊1</a></li>
+                    <li><a href="小瑪莉.html" target="_blank">小瑪莉</a></li>
+                    <li><a href="溫度轉換器.html" target="_blank">溫度轉換器</a></li>
+                </ul>
+            </div>
+            <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
+                <div class="btn-group btn-group-justified" role="group" aria-label="...">
+                    <div class="btn-group" role="group">
+                        <button type="button" class="btn btn-default" onclick="startGame()">開始</button>
+                    </div>
+                    <div class="btn-group" role="group">
+                        <button type="button" class="btn btn-default" onclick="abortGame()">放棄重來</button>
+                    </div>
+                    <div class="btn-group" role="group">
+                        <button type="button" class="btn btn-default" onclick="showAnswer()">看答案</button>
+                    </div>
+                </div>
+                <br />
+
+                <ul class="list-group" id="guessResults">
+                    <!--<li class="list-group-item">-->
+                    <!--<p> <span class="label label-danger">0A1B</span> 1234</p>-->
+                    <!--<p> <span class="label label-danger">0A2B</span> 3456</p>-->
+                    <!--<p> <span class="label label-danger">0A3B</span> 4567</p>-->
+                    <!--<p> <span class="label label-success"> 4A0B</span> 6385</p>-->
+                    <!--</li>-->
+                </ul>
+
+                <br />
+                <div class="row">
+                    <div class="col-lg-6">
+                        <div class="input-group">
+                            <span class="input-group-addon" id="basic-addon1">猜答案</span>
+                            <input type="text" class="form-control" id="userGuess">
+                            <span class="input-group-btn">
         <button class="btn btn-default" type="button" onclick="doGuess()">猜!</button>
       </span>
+                        </div>
+                        <!-- /input-group -->
+                    </div>
+                    <!-- /.col-lg-6 -->
+                </div>
+                <!-- /.row -->
+
+
             </div>
-            <!-- /input-group -->
-          </div>
-          <!-- /.col-lg-6 -->
         </div>
-        <!-- /.row -->
-
-
-      </div>
     </div>
-  </div>
 
-  <!-- Bootstrap core JavaScript
+    <!-- Bootstrap core JavaScript
     ================================================== -->
-  <!-- Placed at the end of the document so the pages load faster -->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-  <!--<script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>-->
-  <script src="scripts/bootstrap.min.js"></script>
-  <!-- Just to make our placeholder images work. Don't actually copy the next line! -->
-  <!--<script src="../../assets/js/vendor/holder.min.js"></script>-->
-  <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-  <!--<script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>-->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <!--<script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>-->
+    <script src="scripts/bootstrap.min.js"></script>
+    <!-- Just to make our placeholder images work. Don't actually copy the next line! -->
+    <!--<script src="../../assets/js/vendor/holder.min.js"></script>-->
+    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+    <!--<script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>-->
 
-  <script>
-    //confirm
+    <script>
+        //confirm
 
-    var answer = "";
+        var answer = "";
 
-    function startGame() {
-      document.getElementById("guessResults").innerHTML = "";
-      document.getElementById("userGuess").value = "";
+        function startGame() {
+            document.getElementById("guessResults").innerHTML = "";
+            document.getElementById("userGuess").value = "";
 
-      answer = "";
+            answer = "";
 
-      while (answer.length < 4) {
-        var number = Math.floor(Math.random() * 10);
+            while (answer.length < 4) {
+                var number = Math.floor(Math.random() * 10);
 
-        if (answer.indexOf(number) == -1) {
-          answer += number;
-        }
-      }
-      alert("準備好，要開始了");
-    }
-
-
-
-    function abortGame() {
-      //  document.getElementById("guessResults").innerHTML = "";
-      //  document.getElementById("userGuess").value = 0;
-      // alert("確定要放棄?");
-      // startGame();
-
-      if (confirm("確定要放棄?")) {
-        startGame();
-      }
-    }
-
-
-    function showAnswer() {
-      alert("你猜不到答案是" + answer + "吧！");
-      startGame();
-    }
-
-
-    function doGuess() {
-      var userGuess = document.getElementById("userGuess");
-      var thisRoundAnswer = userGuess.value;
-      var aCount = 0,
-        bCount = 0;
-
-
-      if (thisRoundAnswer.length != 4) {
-        alert("輸入錯誤，要輸入4碼哦！");
-        return;
-      }
-
-      if (isNaN(thisRoundAnswer)) {
-        alert("只能輸入數字哦！");
-        return;
-      }
-
-      var existed = ""; //比對過就記起來
-      for (var i = 0; i < thisRoundAnswer.length; i++) {
-        var number = thisRoundAnswer.charAt(i);
-
-
-        if (existed.indexOf(number) != -1) { //如果發現比對過就告訴使用者，!= -1 表示有在裡面
-          alert("答案中有重複的數字！");
-          return;
-        }
-        var position = answer.indexOf(number);
-
-        if (position == i) {
-          aCount++;
-        } else if (position != -1) {
-          bCount++;
+                if (answer.indexOf(number) == -1) {
+                    answer += number;
+                }
+            }
+            alert("準備好，要開始了");
         }
 
-        existed += thisRoundAnswer.charAt(i);
-      }
-
-      var ab = aCount + "A" + bCount + "B";
-      // alert(aCount + "A" + bCount + "B");
-
-      // confirm( document.getElementById(userGuess.value+ab).innerHTML = "" );
-
-      var guessResults = document.createElement("li");
-      guessResults.className = "list-group-item";
-
-      if (aCount == 4) {
-        guessResults.innerHTML = "<span class=\"label label-success\">" + ab + "</span>" + userGuess.value;
-        document.getElementById("guessResults").appendChild(guessResults);
-        alert("Win!");
-      } else {
-        guessResults.innerHTML = "<span class=\"label label-danger\">" + ab + "</span>" + userGuess.value;
-        document.getElementById("guessResults").appendChild(guessResults);
-      }
-      userGuess.value = "";
-
-    }
-    document.getElementById("userGuess").onkeyup = function (event) {
-      if (event.keyCode == 13)  //13 = 電腦 enter 的意思
-       { 
-        doGuess();
-      }
-    };
 
 
-    // startGame();
-  </script>
+        function abortGame() {
+            //  document.getElementById("guessResults").innerHTML = "";
+            //  document.getElementById("userGuess").value = 0;
+            // alert("確定要放棄?");
+            // startGame();
+
+            if (confirm("確定要放棄?")) {
+                startGame();
+            }
+        }
+
+
+        function showAnswer() {
+            alert("你猜不到答案是" + answer + "吧！");
+            startGame();
+        }
+
+
+        function doGuess() {
+            var userGuess = document.getElementById("userGuess");
+            var thisRoundAnswer = userGuess.value;
+            var aCount = 0,
+                bCount = 0;
+
+
+            if (thisRoundAnswer.length != 4) {
+                alert("輸入錯誤，要輸入4碼哦！");
+                return;
+            }
+
+            if (isNaN(thisRoundAnswer)) {
+                alert("只能輸入數字哦！");
+                return;
+            }
+
+            var existed = ""; //比對過就記起來
+            for (var i = 0; i < thisRoundAnswer.length; i++) {
+                var number = thisRoundAnswer.charAt(i);
+
+
+                if (existed.indexOf(number) != -1) { //如果發現比對過就告訴使用者，!= -1 表示有在裡面
+                    alert("答案中有重複的數字！");
+                    return;
+                }
+                var position = answer.indexOf(number);
+
+                if (position == i) {
+                    aCount++;
+                } else if (position != -1) {
+                    bCount++;
+                }
+
+                existed += thisRoundAnswer.charAt(i);
+            }
+
+            var ab = aCount + "A" + bCount + "B";
+            // alert(aCount + "A" + bCount + "B");
+
+            // confirm( document.getElementById(userGuess.value+ab).innerHTML = "" );
+
+            var guessResults = document.createElement("li");
+            guessResults.className = "list-group-item";
+
+            if (aCount == 4) {
+                guessResults.innerHTML = "<span class=\"label label-success\">" + ab + "</span>" + userGuess.value;
+                document.getElementById("guessResults").appendChild(guessResults);
+                alert("Win!");
+            } else {
+                guessResults.innerHTML = "<span class=\"label label-danger\">" + ab + "</span>" + userGuess.value;
+                document.getElementById("guessResults").appendChild(guessResults);
+            }
+            userGuess.value = "";
+
+        }
+        document.getElementById("userGuess").onkeyup = function(event) {
+            if (event.keyCode == 13) //13 = 電腦 enter 的意思
+            {
+                doGuess();
+            }
+        };
+
+
+        // startGame();
+    </script>
 
 
 
